# FlatMultiplayer

./: .gitignore  CMakeLists.txt  README.md
include/: GameMap.hpp  GameState.hpp  socketsUtil.hpp
src/: GameMap.cpp  GameState.cpp  client.cpp  server.cpp  socketsUtil.cpp
tests/: gameStateTest.cpp
util/: socketsUtil.cpp
